Commit final Manon

--- a/public/rules.html
+++ b/public/rules.html
@@ -29,8 +29,8 @@
     <div class="col">
         <p>Your mission, should you chose to accept it, will be to eat as many candy as possible. To move, use the directional arrows of your keyboard. The top arrow will allow you to go up ('duh), the bottom one to go down, the right one to go right and guess what? The left arrow will allow you to go... LEFT!</p>
             <ul><strong>Danger zone:</strong>
-                <li>Everytime you eat a candy, you will get fatter. If you get too big, you will explode!</li>
-                <li>Be aware of the vegetables, they are vicious! If you eat one, you will lose weight but you will have only 10 seconds to eat a candy before dying in terrible pain.</li>
+                <li>Everytime you eat a candy, you will get fatter. If you get too big, you will die in terrible pain!</li>
+                <li>If you want to lose weight, eat some vegetables.</li>
                 <li>The level is over when all the sweets are eaten.</li>
             </ul>
     </div>
